Fixed styling issue with word-break in package.json settings

--- a/apps/browser/src/app/settings/package-json-selector/package-json-selector.component.less
+++ b/apps/browser/src/app/settings/package-json-selector/package-json-selector.component.less
@@ -14,6 +14,10 @@
         overflow: auto;
 
         .list-group-item {
+            h4, .file-path {
+                word-break: break-word;
+            }
+
             p {
                 .truncate-lines(3);
             }
